# dictum

./: .gitignore  Export  catalog query - 7_7_2026.ndjson  LICENSE  README.es.md  README.md  docker-compose.yml  plan.md
api/: Dockerfile  go.mod  go.sum
corpus_archive/: manifest.json
corpus_archive/texts/: 30-202.txt  51-202.txt  67-202.txt  SENTENCIA  1974-2023  D.B. Y PREST..txt  SENTENCIA  738-2024  lic Rafael Alvidre.txt  SENTENCIA  814-2023 DECLARA BENEFICIARIO.txt  SENTENCIA  814-2023 TRANSPARENCIA.txt  SENTENCIA 1051-2024 lic, carlos manuel roger.txt  SENTENCIA 1087-202.txt  SENTENCIA 1106-202.txt  SENTENCIA 1115-202.txt  SENTENCIA 1134-202.txt  SENTENCIA 1142-2022 D.B hija incompe.txt  SENTENCIA 1162-202.txt  SENTENCIA 1199-202.txt  SENTENCIA 1206-2023 ren - yanich huella firma doc - abs.txt  (+95 more)
migrations/: 0001_init.sql  0002_seed_typologies.sql
ml/: .dockerignore  Dockerfile  app.py  pyproject.toml
ml/classify/: knn.py  test_knn.py
ml/eval/: metrics.py  run_eval.py  test_metrics.py
ml/packager/: bundle.py  test_bundle.py
ml/parsing/: liteparse_service.py
ml/prompts/: classify.md  draft.md  risk_explain.md  similar_explain.md
ml/prompts/schemas/: classify.output_schema.json  draft.output_schema.json  risk_explain.output_schema.json  similar_explain.output_schema.json
ml/rag/: chunking.py  db.py  embedding_service.py  retrieval.py  test_embedding_service.py  test_retrieval.py
ml/risk/: score.py  test_score.py
ml/spikes/: embedding_benchmark.py  embedding_benchmark_raw.json  embedding_benchmark_report.md  liteparse_spike.md
web/: index.html
(+43 files in other folders)
