[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dictum-ml"
version = "0.1.0"
description = "Dictum ML worker: parsing, embeddings, retrieval, package building"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sentence-transformers>=3.2",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "numpy>=1.26",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "liteparse>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
where = ["."]
